templates/hubbasic2012/css/pages/home.css
/**
 * @package     hubzero-cms
 * @file        templates/hubbasic/css/pages/home.css
 * @copyright   Copyright 2005-2012 Purdue University. All rights reserved.
 * @license     http://www.gnu.org/licenses/lgpl-3.0.html LGPLv3
 */

	.com_content .contentpaneopen {
		padding: 0px;
	}
	#content {
		background: transparent;
		box-shadow: none;
	}
	html>body #content {
		*border: none;
		border: none\9;
		margin-top: -1px\9;
	}
/* Misc */
	#sub-masthead {
		padding: 0;
		position: relative;
		height: auto;
	}
	#splash {
		margin: 0 30px;
		background: transparent url("../../images/layout/stripes.png") left top repeat-x;
		padding: 0;
		height: 320px;
		position: relative;
		overflow: hidden;
	}

/* Congratulations box */
	#welcome {
		width: 45em;
		margin: 40px auto 0 auto;
		background: #000;
		background: rgba(0, 0, 0, 0.4);
		-webkit-border-radius: 1em;
		-moz-border-radius: 1em;
		-ms-border-radius: 1em;
		-o-border-radius: 1em;
		border-radius: 1em;
		padding: 30px;
		text-align: center;
		color: #ddd;
		text-shadow: 0 2px 2px rgba(0, 0, 0, 0.4);
		*background: #000;
		filter: alpha(opacity = 60);
	}
	#welcome h2 {
		margin: 0;
		padding: 0;
		color: #fff;
	}
	#welcome a:hover {
		color: #fff;
		border-bottom: 1px solid #fff;
	}

/* Freatured items */
	#features {
		margin: -80px 0 0 0;
	}
	#features .wrap {
		margin: 0;
		padding: 0 0 100px 0;
	}
	#features .columns {
		background: url("../../images/layout/stripes.png") 0 bottom repeat-x;
		padding: 0 0 10px 0;
		position: relative;
	}
	#features h2 {
		display: none;
	}
	#features h3 {
		border-bottom: 1px dashed #bAbAbA;
		font-size: 1.5em;
		padding: 30px;
		margin: 0;
		font-weight: normal;
		background: #f9f9f9 url("../../images/layout/noise-lite.png");
	}
	#features .columns p,
	#features .columns ul {
		border: none;
	}
	#features .columns p,
	#features .columns form {
		margin: 0;
		padding: 30px 30px 30px 30px;
	}
	#features .columns form p,
	#features .columns p + p {
		padding-top: 0;
	}
	#features .columns form {
		padding-bottom: 0;
	}
	#features .columns p.btn-container {
		text-align: center;
	}
	#features .columns div:first-child {
		position: relative;
		background: #fff;
		margin: 0;
		padding: 0;
		-webkit-box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.2);
		-moz-box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.2);
		-ms-box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.2);
		-o-box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.2);
		box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.2);
		min-height: 164px;
	}
	html.firefox #features .columns div:first-child {
		min-height: 174px;
	}
	#features .columns:before,
	#features .columns:after,
	#features .columns div:first-child:before,
	#features .columns div:first-child:after {
		content: "";
		display: block;
		margin: 0 0 0 -40px;
		padding: 0;
		position: absolute;
		bottom: -100px;
		left: 50%;
		z-index: 100;
	}
	#features .columns:before {
		border: 8px solid #e5e5e5;
		border-color: #e5e5e5 transparent transparent transparent;
		bottom: -7px;
		margin: 0 0 0 -8px;
	}
	#features .columns:after {
		border: 8px solid #fff;
		border-color: #fff transparent transparent transparent;
		bottom: -6px;
		margin: 0 0 0 -8px;
	}
	#features .columns div:first-child:before {
		width: 80px;
		height: 80px;
		-webkit-border-radius: 80px;
		-moz-border-radius: 80px;
		-ms-border-radius: 80px;
		-o-border-radius: 80px;
		border-radius: 80px;
		background: #efefef url("../../images/layout/stripes.png");
		background: rgba(0, 0, 0, 0.05) url("../../images/layout/stripes.png");
	}
	#features .columns div:first-child:after {
		font-family: 'Fontcons';
		font-size: 50px;
		content: "\270D";
		bottom: -70px;
		margin: 0 0 0 -22px;
		color: #f4f4f4;
		color: #5a5a5a;
		text-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
	}
	#features .columns div.resource:after {
		content: "\270D";
	}
	#features .columns div.tool:after {
		content: "\2692";
	}
	#features .columns div.poll:after {
		content: "\f080";
	}
	#features .poll h4 {
		margin: 0;
		padding: 0 0 1em 0;
	}
	#features .poll ul {
		margin: 0;
		list-style: none;
	}
	#features .poll li {
		background: #f9f9f9;
		padding: 0.5em;
		margin: 1px 0 0 0;
	}
	#features .poll li:hover {
		background: #fff;
	}
	#features .columns .poll p {
		margin: 1em 0 0 0;
		padding-left: 0;
		padding-right: 0;
	}
	#features .poll a {
		float: right;
	}
	#features .columns div.question:after {
		content: "\f086";
	}
	#features .columns .featured-resource .featured-img {
		float: left;
		padding-bottom: 15px;
	}
	#features .columns .featured-resource .featured-img a {
		border: none;
	}
	#features .columns .featured-resource p {
		padding: 30px;
	}
	#features .columns .featured-resource:after {
		content: ".";
		visibility: hidden;
		height: 1px;
		clear: left;
	}

/* Highlight section */
	.highlight-section {
		padding: 30px 60px;
		margin: 0 -30px 2em -30px;
		text-align: center;
		background: #e1e1e1 url("../../images/layout/noise-lite.png");
		color: #5a5a5a;
		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.8);
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		-ms-box-shadow: none;
		-o-box-shadow: none;
		box-shadow: none;
		font-size: 2em;
	}
/* ... */

